--- a/.github/workflows/5-uso-variables.yml
+++ b/.github/workflows/5-uso-variables.yml
@@ -71,4 +71,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 5
           to_step: X
-          branch_name: aprendiendo-github-actions
+          branch_name: main
