--- a/.github/workflows/0-inicio.yml
+++ b/.github/workflows/0-inicio.yml
@@ -89,4 +89,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 0
           to_step: 1
-          branch_name: aprendiendo-github-actions
+          branch_name: main
