--- a/.github/workflows/4-usa-contextos.yml
+++ b/.github/workflows/4-usa-contextos.yml
@@ -71,4 +71,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 4
           to_step: 5
-          branch_name: aprendiendo-github-actions
+          branch_name: main
