--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -41,3 +41,13 @@ jobs:
         run: echo "LANGUAGE=${{ inputs.lenguaje_favorito }}" >> $GITHUB_ENV
       - name: Correr script
         run: node index.js
+  hola-mundo:
+    if: ${{ github.event_name != 'workflow_dispatch'}}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Definir variable
+        run: echo "USERNAME=${{ github.actor}}" >> $GITHUB_ENV
+      - name: Correr script
+        run: node index.js
