--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -49,5 +49,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Definir variable
         run: echo "USERNAME=${{ github.actor}}" >> $GITHUB_ENV
-      - name: Correr script
+      - name: Correr script de NodeJS
         run: node index.js
